--- a/src/components/Dashboard/Tables/ProductsTable/Form/CategoriesTree/CategoriesTree.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/Form/CategoriesTree/CategoriesTree.module.css
@@ -13,7 +13,7 @@
 
 .form {
   padding: 20px;
-  width: 400px;
+  width: 700px;
   background-color: var(--panel);
   border: 1px solid var(--border);
   border-radius: 10px;
@@ -28,11 +28,20 @@
   flex-grow: 1;
 }
 
-.chartContainer{
+.chartContainer {
   margin-top: 20px;
   outline: 1px solid grey;
   border-radius: 10px;
-  overflow: hidden;
+  overflow-x: scroll;
+}
+
+.edits {
+  display: flex;
+  flex-direction: column;
+}
+
+.edits .buttons button:first-child {
+  margin-right: 10px;
 }
 
 .inputs {
@@ -42,7 +51,14 @@
 
 .inputs div {
   flex-grow: 1;
+}
+
+.inputs button:nth-child(3) {
   margin-right: 10px;
+}
+
+.inputs button {
+  width: 60px;
 }
 
 .buttons {
