Update add product

--- a/src/components/Dashboard/Tables/ProductsTable/Details/Details.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/Details/Details.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
   position: fixed;
   top: 0;
   left: 0;
@@ -10,50 +10,55 @@
   background-color: #0006;
 }
 
-.details{
+.details {
   padding: 30px;
   border-radius: 10px;
   background-color: var(--panel);
 }
 
-.btnClose{
+.btnClose {
   display: flex;
   justify-content: flex-end;
 }
 
-.data{
+.data {
   display: flex;
 }
 
-.inputs{
+.inputs {
   width: 400px;
 }
 
-.rightData{
+.rightData {
   display: flex;
   flex-direction: column;
   width: 400px;
   margin-left: 30px;
 }
 
-.imgContainer{
+.imgContainer {
   flex-grow: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.imgContainer img{
+.imgContainer img {
   width: 100%;
 }
 
-.btnContainer{
+.btnContainer {
+  display: flex;
   width: 100%;
   margin-top: 30px;
 }
 
-.btnContainer button:nth-child(2){
+.btnContainer button:nth-child(2) {
   margin: 0 20px;
+}
+
+.leftButtons {
+  flex-grow: 1;
 }
 
 .inputs input,
@@ -64,7 +69,7 @@
 .inputs select:focus,
 .inputs select:active,
 .inputs select:disabled,
-.inputs .form-floating{
+.inputs .form-floating {
   background-color: #0002;
   border-color: var(--border);
   color: var(--font);
