--- a/src/components/Dashboard/Tables/ClientsTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/ClientsTable/Form/Form.module.css
@@ -1,17 +1,16 @@
-.background {
+.container {
   position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0006;
+  background-color: #0004;
 }
 
-.background form {
-  width: 400px;
+.form {
   padding: 20px;
   border-radius: 10px;
   background-color: white;
@@ -20,9 +19,22 @@
 .close {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .close h4 {
   flex-grow: 1;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+.inputs input {
+  width: 350px;
+}
+
+.inputs div {
+  margin-bottom: 10px;
 }
