--- a/src/components/Dashboard/Tables/ClientsTable/ClientRows/ClientRows.module.css
+++ b/src/components/Dashboard/Tables/ClientsTable/ClientRows/ClientRows.module.css
@@ -1,12 +1,13 @@
-.row {
+.row{
   display: grid;
-  grid-template-columns: repeat(2, 100px) repeat(2, 1fr) repeat(1, 100px) repeat(3, 80px);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 80px 80px;
+  grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
   padding-bottom: 0px;
   outline: 1px solid var(--border);
 }
 
-.row span {
+.row input{
   border-right: 1px solid var(--border);
 }
