--- a/src/components/Dashboard/Tables/UsersTable/UserRows/UserRows.module.css
+++ b/src/components/Dashboard/Tables/UsersTable/UserRows/UserRows.module.css
@@ -1,12 +1,13 @@
-.row {
+.row{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns:repeat(4, 1fr) 80px 80px;
+  grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
   padding-bottom: 0px;
   outline: 1px solid var(--border);
 }
 
-.row span {
+.row input{
   border-right: 1px solid var(--border);
 }
