--- a/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -1,8 +1,9 @@
-.container{  
+.container {
+  width: min-content;
   margin: 10px 20px;
 }
 
-.productData{
+.productData {
   padding: 5px;
   margin-left: 10px;
 }
@@ -17,35 +18,52 @@
   align-items: center;
 }
 
-.image{
-  width: 120px;
-  height: 120px;
+.inputs {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.inputs div:last-child {
+  grid-column: 1 / 3;
+}
+
+.image {
+  display: flex;
+  align-items: center;
+  width: 180px;
+  height: 180px;
   margin-right: 20px;
   border-radius: 10px;
+  overflow: hidden;
   border: 1px solid var(--border);
   background-color: var(--background);
 }
 
-.image img{
-  filter: invert(60%);
+.image img {
+  width: 100%;
+  max-height: 100%;
 }
 
-.image:hover{
+.image:hover {
   cursor: pointer;
   outline: 2px solid var(--primary-color);
 }
-.codes{
-  margin-right: 20px;
+.codes {
+  display: grid;
+  grid-template-columns: 120px 250px;
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 5px;
 }
 
-.codes .top{
-  display: flex;
+.price {
+  display: grid;
+  gap: 5px;
+  grid-template-columns: repeat(3, 135px);
+  grid-template-rows: repeat(2, 1fr);
 }
 
-.price{
-  display: flex;
-}
-
-.price .top{
-  display: flex;
+.price div:last-child {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
 }
