--- a/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -3,11 +3,6 @@
   margin: 10px 20px;
 }
 
-.productData {
-  padding: 5px;
-  margin-left: 10px;
-}
-
 .list {
   height: 500px;
   overflow-y: scroll;
@@ -16,6 +11,16 @@
 .item {
   display: flex;
   align-items: center;
+}
+
+.productLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.productLeft span{
+  margin-bottom: 10px;
 }
 
 .inputs {
@@ -28,11 +33,24 @@
   grid-column: 1 / 3;
 }
 
+.check{
+  display: flex;
+  grid-column: 1 / 3;
+}
+
+.check input{
+  margin-right: 5px;
+}
+
+.check label{
+  margin-right: 30px;
+}
+
 .image {
   display: flex;
   align-items: center;
-  width: 180px;
-  height: 180px;
+  width: 190px;
+  height: 190px;
   margin-right: 20px;
   border-radius: 10px;
   overflow: hidden;
@@ -59,11 +77,23 @@
 .price {
   display: grid;
   gap: 5px;
-  grid-template-columns: repeat(3, 135px);
+  grid-template-columns: repeat(2, 135px);
   grid-template-rows: repeat(2, 1fr);
 }
 
 .price div:last-child {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.recargo {
+  display: grid;
+  gap: 5px;
+  grid-template-columns: repeat(3, 135px);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.recargo div:last-child {
   grid-column: 2 / 4;
   grid-row: 2 / 3;
 }
