--- a/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
@@ -11,24 +11,45 @@
   background-color: #0006;
 }
 
-.close{
-  display: flex;
-  justify-content: flex-end;
-}
-
 .form{
-  min-width: 600px;
+  width: 500px;
   padding: 20px;
   border-radius: 10px;
   background-color: var(--panel);
 }
 
-.form .icon{
-  filter: invert(100);
-}
-
 .form h4{
   margin-bottom: 30px;
+}
+
+.close{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.imageContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+  height: 445px;
+  overflow: hidden;
+  border-radius: 5px;
+  outline: 1px solid gray;
+}
+
+.delete {
+  position: absolute;
+  z-index: 500;
+  top: 10px;
+  right: 10px;
+}
+
+.imageContainer img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .imgList{
@@ -56,4 +77,8 @@
 .imgList .image img{
   width: 50px;
   height: 50px;
+}
+
+.btnContainer button{
+  margin-right: 10px;
 }
