--- a/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -48,7 +48,7 @@
 
 .image {
   display: flex;
-  align-items: center;
+  justify-content: center;
   width: 190px;
   height: 190px;
   margin-right: 20px;
@@ -59,8 +59,7 @@
 }
 
 .image img {
-  width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .image:hover {
