--- a/src/components/Dashboard/Tables/UsersTable/UsersTable.module.css
+++ b/src/components/Dashboard/Tables/UsersTable/UsersTable.module.css
@@ -1,6 +1,6 @@
 .row{
   display: grid;
-  grid-template-columns:repeat(4, 1fr) 80px 80px;
+  grid-template-columns:repeat(4, 1fr) repeat(3, 80px);
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
