--- a/src/components/Dashboard/Tables/InventoryTable/InventoryTable.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/InventoryTable.module.css
@@ -1,3 +1,67 @@
+.dashboardList {
+  position: relative;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  padding-top: 0;
+  background: var(--background);
+  overflow: hidden;
+}
+
+.dashboardList__searchBar {
+  display: flex;
+  margin: 20px 0px;
+}
+
+.dashboardList__searchBar input[type="search"] {
+  max-width: 500px;
+}
+
+.dashboardList__searchBar button {
+  margin-left: 20px;
+}
+
+.dashboardList__searchBar button img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  filter: invert(100);
+}
+
+.dashboardList__grid {
+  flex-grow: 1;
+  outline: 1px solid var(--border);
+  overflow: hidden;
+}
+
+.contentCard {
+  height: 100%;
+  padding-bottom: 35px;
+  overflow: scroll;
+}
+
+.listEmpty {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.edit-buttons .btn-primary{
+  width: 100%;
+}
+
+.edit-buttons .btn-success{
+  width: 50%;
+  margin-right: 5px;
+}
+
+.edit-buttons .btn-danger{
+  width: 45%;
+}
+
 .card{
   display: grid;
   grid-template-columns: 200px 150px 100px 1fr repeat(3, 100px) 130px 100px 80px;
@@ -7,10 +71,8 @@
   outline: 1px solid var(--border);
 }
 
-.card span{
-  border-right: 1px solid var(--border);
-}
-
 .firstrow{
   padding-right: 25px;
+  color: white;
+  background-color: var(--dark-panel);
 }
