--- a/src/components/Dashboard/SideBar/SideBar.module.css
+++ b/src/components/Dashboard/SideBar/SideBar.module.css
@@ -1,38 +1,22 @@
 .sideBar {
+  position: relative;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
-  background-color: var(--panel);
-  color: white;
+  background-color: var(--dark-panel);
 }
 
-.user {
+.head {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  max-width: 300px;
+  padding: 30px;
   background-color: #0002;
 }
 
-.containerImg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  border: 1px solid var(--background);
-  background-color: var(--panel);
-}
-
-.containerImg img {
-  width: 50%;
-  height: 50%;
-  filter: invert(50%);
-}
-
-.containerImg:hover {
-  cursor: pointer;
-  border-color: var(--primary-color);
+.head img {
+  width: 80%;
 }
 
 .sideBar button {
@@ -44,36 +28,39 @@
   padding: 15px 20px;
   text-align: left;
   font-size: 18px;
-  border-top: 1px solid var(--panel);
-  border-bottom: 1px solid var(--panel);
-  border-left: 5px solid var(--panel);
+  border-top: 5px solid var(--dark-panel);
+  border-bottom: 5px solid var(--dark-panel);
+  border-left: 0px solid var(--dark-panel);
   background-color: inherit;
   color: gray;
+  transition: 0.1s;
 }
 
-.sideBar button img{
+.sideBar button img {
   width: 30px;
   margin-right: 10px;
-  filter: invert(10%)
+  filter: invert(90);
 }
-
 
 .sideBar button:hover {
   color: var(--primary-color);
-  filter: brightness(80%);
+  background-color: #0003;
 }
 
-.sideBar button:hover img{
-  filter: invert(23%) sepia(88%) saturate(2376%) hue-rotate(250deg) brightness(80%) contrast(99%);
+.sideBar button:hover img {
+  filter: invert(20%) sepia(20%) saturate(7404%) hue-rotate(332deg)
+    brightness(99%) contrast(126%);
 }
 
 .sideBar .selected {
   color: var(--primary-color);
-  filter: brightness(90%);
-  border-color: var(--background);
+  border-right: 5px solid var(--background);
   border-left: 5px solid var(--primary-color);
+  background-color: #0003;
+  transition: 0.1s;
 }
 
-.sideBar .selected img{
-  filter: invert(23%) sepia(88%) saturate(2376%) hue-rotate(250deg) brightness(80%) contrast(99%);
+.sideBar .selected img {
+  filter: invert(20%) sepia(20%) saturate(7404%) hue-rotate(332deg)
+    brightness(99%) contrast(126%);
 }
