--- a/src/components/Dashboard/Tables/InventoryTable/Form/AddProduct/AddProduct.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/AddProduct/AddProduct.module.css
@@ -4,30 +4,33 @@
   top: 0;
   left: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: #0006;
 }
 
 .window {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 800px;
-  margin: auto;
-  padding: 30px;
-  background-color: var(--panel);
-  border-radius: 10px;
-  box-shadow: 0 0 10px 5px #0006;
+  padding: 20px;
+  background-color: var(--background);
+  border-radius: 5px;
 }
 
 .window .close {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   margin-bottom: 30px;
   width: 100%;
 }
 
-.window h4 {
+.window h5 {
   flex-grow: 1;
   text-align: left;
 }
@@ -37,16 +40,16 @@
   margin-top: 30px;
 }
 
-.searchData{
+.searchData {
   width: 100%;
 }
 
-.search{
+.search {
   display: flex;
   flex-direction: row;
 }
 
-.search button{
+.search button {
   margin-left: 10px;
 }
 
@@ -54,8 +57,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: 20px;
-  border-radius: 5px;
+  margin: 20px 0;
   height: 300px;
   overflow: hidden;
   border: 1px solid var(--border);
@@ -64,16 +66,18 @@
 .data {
   flex-grow: 1;
   overflow-y: scroll;
-  background-color: #0004;
 }
 
 .row {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   border-bottom: 1px solid var(--border);
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
-.row span{
+.row span {
   padding: 5px 10px;
   text-align: center;
 }
@@ -83,23 +87,38 @@
   grid-template-columns: repeat(5, 1fr);
   padding: 5px 10px;
   text-align: center;
-  border-bottom: 1px solid var(--border);
-  color: var(--font);
-  background-color: var(--panel);
+  color: white;
+  background-color: var(--dark-panel);
 }
 
 .selected {
-  background-color: var(--primary-color--transp);
+  background-color: #0005;
 }
 
 .row:hover {
-  background-color: var(--primary-color);
+  background-color: #0003;
 }
 
 .selected:hover {
-  filter: brightness(90%);
+  background-color: #0006;
 }
 
 .firstRow:hover {
   filter: none;
+}
+
+.btnContainer {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 100px 1fr 140px;
+  width: 100%;
+}
+
+.btnContainer button {
+  width: 100%;
+}
+
+.btnContainer button:nth-child(2) {
+  justify-self: end;
+  width: 100px;
 }
