--- a/src/components/Dashboard/Tables/InventoryTable/Form/AddSupplier/AddSupplier.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/AddSupplier/AddSupplier.module.css
@@ -4,33 +4,39 @@
   top: 0;
   left: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: #0006;
 }
 
 .window {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 600px;
-  margin: auto;
-  padding: 30px;
-  background-color: var(--panel);
-  border-radius: 10px;
-  box-shadow: 0 0 10px 5px #0006;
+  width: 700px;
+  padding: 20px;
+  background-color: var(--background);
+  border-radius: 5px;
 }
 
 .window .close {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
-.window h4 {
+.window h5 {
   flex-grow: 1;
   text-align: left;
+}
+
+.window div {
+  margin-bottom: 10px;
 }
 
 .window button[type="submit"] {
@@ -42,8 +48,8 @@
   display: flex;
   flex-direction: column;
   margin-top: 20px;
-  border-radius: 5px;
-  height: 200px;
+  width: 100%;
+  height: 250px;
   overflow: hidden;
   border: 1px solid var(--border);
 }
@@ -51,13 +57,15 @@
 .data {
   flex-grow: 1;
   overflow-y: scroll;
-  background-color: #0004;
 }
 
 .row {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   border-bottom: 1px solid var(--border);
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .row span{
@@ -69,25 +77,34 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   padding: 5px 10px;
+  padding-right: 18px;
   text-align: center;
-  border-bottom: 1px solid var(--border);
-  color: var(--font);
-  margin-right: 18px;
-  background-color: var(--panel);
+  color: white;
+  background-color: var(--dark-panel);
 }
 
 .selected {
-  background-color: var(--primary-color--transp);
+  background-color: #0005;
 }
 
 .row:hover {
-  filter: brightness(90%);
+  background-color: #0003;
 }
 
 .selected:hover {
-  filter: brightness(90%);
+  background-color: #0006;
 }
 
 .firstRow:hover {
   filter: none;
+}
+
+.btnContainer{
+  display: grid;
+  width: 100%;
+  grid-template-columns: 100px 1fr ;
+}
+
+.btnContainer button:last-child{
+  justify-self: end;
 }
