--- a/src/components/Dashboard/Tables/InventoryTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/Form.module.css
@@ -1,31 +1,22 @@
-.container {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
+.form {
+  position: absolute;
+  z-index: 1000;
   left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #0006;
-}
-
-.container input,
-.container input:focus,
-.container input:active,
-.container select,
-.container select:focus,
-.container select:active,
-.form-floating{
-  background-color: #0002;
-  border-color: var(--border);
+  padding: 20px;
+  padding-top: 0;
   color: var(--font);
+  background-color: var(--background);
 }
 
 .close {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .close h4 {
@@ -33,69 +24,25 @@
   margin: none;
 }
 
-.form {
-  padding: 20px;
-  border-radius: 10px;
-  border: 1px solid var(--border);
-  color: var(--font);
-  background-color: var(--panel);
+.close div{
+  margin-right: 7px;
 }
 
-.form .data {
+.flex {
+  flex-grow: 1;
+  display: flex;
+}
+
+.dataRight {
   display: flex;
   flex-direction: column;
-}
-
-.flex{
-  display: flex;
-}
-
-.dataRight{
-  display: flex;
-  flex-direction: column;
+  width: 400px;
 }
 
 .form button[type="submit"] {
   margin-top: 30px;
 }
 
-.barCodeData {
-  display: flex;
-}
-
-.barCodeData input {
-  display: flex;
-}
-
-.containerButton {
-  display: flex;
-  justify-content: center;
-}
-
-.containerButton img {
-  width: 50px;
-  margin-right: 20px;
-  filter: invert(19%) sepia(64%) saturate(4599%) hue-rotate(256deg)
-    brightness(84%) contrast(89%);
-}
-
-.containerButton button {
-  background-color: #0004;
-}
-
-.containerButton button:hover img {
-  filter: invert(100%);
-}
-
-.containerButton button {
-  padding: 20px;
-  font-size: 20px;
-}
-
-.containerButton button:first-child {
-  margin-right: 20px;
-}
-
-.container form-floating{
+.container form-floating {
   border: 1px solid var(--border);
 }
