--- a/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -1,15 +1,13 @@
 .container {
-  width: min-content;
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin: 10px 20px;
-}
-
-.list {
-  height: 500px;
-  overflow-y: scroll;
 }
 
 .item {
   display: flex;
+  width: min-content;
   align-items: center;
 }
 
@@ -20,7 +18,12 @@
 }
 
 .productLeft span{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.productLeft div:last-Child{
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .inputs {
@@ -33,25 +36,36 @@
   grid-column: 1 / 3;
 }
 
-.check{
+.top{
   display: flex;
+  align-items: center;
   grid-column: 1 / 3;
 }
 
-.check input{
+.top input{
   margin-right: 5px;
 }
 
-.check label{
+.top label{
   margin-right: 30px;
+}
+
+.top button{
+  padding: 2px 10px;
+}
+
+.top .btnClose{
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .image {
   display: flex;
   justify-content: center;
-  width: 190px;
-  height: 190px;
-  margin-right: 20px;
+  width: 125px;
+  height: 125px;
+  margin-right: 10px;
   border-radius: 10px;
   overflow: hidden;
   border: 1px solid var(--border);
@@ -66,6 +80,7 @@
   cursor: pointer;
   outline: 2px solid var(--primary-color);
 }
+
 .codes {
   display: grid;
   grid-template-columns: 120px 250px;
