--- a/src/components/Dashboard/Tables/ClientsTable/ClientsTable.module.css
+++ b/src/components/Dashboard/Tables/ClientsTable/ClientsTable.module.css
@@ -30,7 +30,6 @@
 
 .dashboardList__grid {
   flex-grow: 1;
-  border-radius: 10px;
   outline: 1px solid var(--border);
   overflow: hidden;
 }
@@ -71,10 +70,8 @@
   outline: 1px solid var(--border);
 }
 
-.row span{
-  border-right: 1px solid var(--border);
-}
-
 .firstRow{
   padding-right: 20px;
+  color: white;
+  background-color: var(--dark-panel);
 }
