--- a/src/components/Dashboard/Tables/SupplierTable/SupplierTable.module.css
+++ b/src/components/Dashboard/Tables/SupplierTable/SupplierTable.module.css
@@ -1,6 +1,6 @@
 .dashboardList {
-  position: relative;
   flex-grow: 1;
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -30,7 +30,6 @@
 
 .dashboardList__grid {
   flex-grow: 1;
-  border-radius: 10px;
   outline: 1px solid var(--border);
   overflow: hidden;
 }
@@ -71,10 +70,8 @@
   outline: 1px solid var(--border);
 }
 
-.row span{
-  border-right: 1px solid var(--border);
-}
-
 .firstRow{
   padding-right: 20px;
+  color: white;
+  background-color: var(--dark-panel);
 }
