--- a/src/components/Dashboard/NavBar/NavBar.module.css
+++ b/src/components/Dashboard/NavBar/NavBar.module.css
@@ -1,4 +1,4 @@
-.navBar{
+.navBar {
   display: flex;
   justify-content: right;
   padding: 10px 20px;
@@ -6,38 +6,79 @@
   background: var(--background);
 }
 
-.imgContainer{
+.imgContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: gray;
+  border: 1px solid var(--border);
+  background-color: var(--panel);
 }
 
-.imgContainer img{
+.imgContainer img {
   width: 60%;
 }
 
-.menu{
+.backMenu {
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100vh;
+}
+
+.backActive {
+  display: block;
+}
+
+.menu {
   position: fixed;
   top: 60px;
-  display: none;
+  right: 40px;
+  width: 180px;
   padding: 10px 0;
   list-style: none;
   border-radius: 5px;
-  background-color: grey;
+  border: 1px solid var(--border);
+  background-color: var(--background);
+  animation-name: menu;
+  animation-duration: 0.1s;
 }
 
-.menu li{
+.menu li {
   padding: 5px 20px;
+  border: 1px solid #0000;
+  border-left: 1px solid #0000;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
-.menu li:hover{
-  background-color: #2222;
+.menu li:hover {
+  border-color: var(--border);
+  border-left: 5px solid  var(--primary-color);
+  border-right-color: #0000;
+  transition: 0.2s;
 }
 
-.backMenu{
-  display: block;
+.menu li img{
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+@keyframes menu {
+  0% {
+    opacity: 0;
+    right: 0px;
+  }
+  100% {
+    opacity: 1;
+    right: 40px;
+  }
 }
