Update (Configurations - Profile) Update styles

--- a/src/components/Dashboard/Profile/Profile.module.css
+++ b/src/components/Dashboard/Profile/Profile.module.css
@@ -12,10 +12,11 @@
 }
 
 .container {
+  position: relative;
   width: 400px;
   padding: 20px;
-  border-radius: 10px;
-  background-color: #333;
+  border-radius: 5px;
+  background-color: var(--background);
 }
 
 .close {
@@ -24,10 +25,19 @@
   margin-bottom: 20px;
 }
 
-.close h4 {
+.close h5 {
   flex-grow: 1;
 }
 
 .bntContainer button {
+  margin-right: 10px;
+}
+
+.inputs button{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.btnContainer button:first-child{
   margin-right: 10px;
 }
