--- a/src/components/Dashboard/Configuration/Configuration.module.css
+++ b/src/components/Dashboard/Configuration/Configuration.module.css
@@ -12,10 +12,11 @@
 }
 
 .container {
+  position: relative;
   width: 400px;
   padding: 20px;
-  border-radius: 10px;
-  background-color: #333;
+  border-radius: 5px;
+  background-color: var(--background);
 }
 
 .close {
@@ -24,8 +25,15 @@
   margin-bottom: 20px;
 }
 
-.close h4 {
+.close img{
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.close h5 {
   flex-grow: 1;
+  margin: 0;
 }
 
 .bntContainer button {
