--- a/src/components/Dashboard/Tables/ClientsTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/ClientsTable/Form/Form.module.css
@@ -1,5 +1,6 @@
 .container {
   position: fixed;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +13,7 @@
 
 .form {
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: white;
 }
 
