--- a/src/components/Dashboard/Tables/InventoryTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/Form.module.css
@@ -1,6 +1,10 @@
+.background {
+  z-index: 1000;
+}
+
 .form {
   position: absolute;
-  z-index: 1000;
+  z-index: 500;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -24,7 +28,7 @@
   margin: none;
 }
 
-.close div{
+.close div {
   margin-right: 7px;
 }
 
