--- a/src/components/Dashboard/Tables/ProductsTable/Form/AddImages/AddImages.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/Form/AddImages/AddImages.module.css
@@ -1,15 +1,10 @@
-.form {
-  width: 400px;
+.container {
+  width: 250px;
   margin-left: 20px;
   border-radius: 10px;
-  background-color: var(--panel);
 }
 
-/* .form .icon {
-  filter: invert(50%);
-} */
-
-.form h4 {
+.container h4 {
   margin-bottom: 30px;
 }
 
@@ -18,11 +13,11 @@
   display: flex;
   align-items: center;
   width: 100%;
+  height: 305px;
   margin-bottom: 20px;
-  height: 445px;
   overflow: hidden;
   border-radius: 5px;
-  outline: 1px solid gray;
+  outline: 1px solid #ccc;
 }
 
 .delete {
@@ -37,12 +32,12 @@
 
 .imgList {
   display: flex;
-  height: 55px;
+  height: 65px;
   margin-bottom: 20px;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid var(--border);
-  background-color: var(--background);
+  border: 1px solid #ccc;
+  overflow-x: scroll;
 }
 
 .image {
@@ -53,8 +48,7 @@
   overflow: hidden;
   margin-right: 10px;
   border-radius: 5px;
-  border: 1px solid var(--border);
-  background-color: var(--panel);
+  border: 1px solid #ccc;
 }
 
 .image:hover {
@@ -63,4 +57,12 @@
 
 .imgList .image img {
   width: 100%;
+}
+
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  color: grey;
 }
