--- a/src/components/Dashboard/Tables/ProductsTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/Form/Form.module.css
@@ -1,5 +1,6 @@
 .container {
   position: fixed;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,9 +13,9 @@
 
 .form {
   padding: 20px;
-  background-color: var(--panel);
+  background-color: var(--background);
   border: 1px solid var(--border);
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .close {
@@ -33,22 +34,48 @@
 }
 
 .inputs {
-  display: flex;
-  flex-direction: column;
-  width: 350px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  margin-bottom: 20px;
+}
+
+.inputs input{
+  width: 250px;
+}
+
+.inputs div:nth-child(7){
+  grid-column: 1 / 3;
+}
+
+.inputs div:last-child{
+  grid-column: 1 / 3;
 }
 
 .categoria {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 10px;
+  height: 60px;
   border-radius: 5px;
-  background-color: #0003;
+  border: 1px solid #ccc;
+}
+
+.categoria small{
+  position: absolute;
+  top: 60px;
+  left: 0;
 }
 
 .categoria label {
   flex-grow: 1;
   text-align: center;
+}
+
+.categoriaError{
+  border-color: red;
 }
 
 .left {
@@ -61,21 +88,6 @@
   flex-direction: column;
   width: 300px;
   height: 100%;
-}
-
-.container input,
-.container input:focus,
-.container input:active,
-.container textarea,
-.container textarea:focus,
-.container textarea:active,
-.container select,
-.container select:focus,
-.container select:active,
-.form-floating {
-  background-color: #0002;
-  border-color: var(--border);
-  color: var(--font);
 }
 
 .right div:first-child {
