--- a/src/components/Dashboard/Tables/SupplierTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/SupplierTable/Form/Form.module.css
@@ -1,5 +1,6 @@
 .container {
   position: fixed;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,12 +8,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0004;
+  background-color: #0006;
 }
 
 .form {
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: white;
 }
 
