--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,31 +1,58 @@
-.sesion{
+.sesion {
   flex-grow: 1;
-  displaY: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #102040;
+  background-color: var(--dark-background);
 }
 
-.sesion form{
+.sesion form {
+  position: relative;
+  width: 400px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0px 0px 30px 5px #0003;
+  overflow: hidden;
+}
+
+.sesion .header {
+  padding: 50px;
+  background-color: #000a;
+}
+
+.sesion .header img {
+  width: 250px;
+}
+
+.sesion .content {
   display: flex;
   flex-direction: column;
   padding: 30px;
-  width: 400px;
-  border-radius: 20px;
-  text-align: center;
-  box-shadow: 0px 0px 30px 5px #0003;
-  background-color: white;
+  background-color: var(--background);
 }
 
-.sesion form h2{
-  margin-bottom: 30px;
+.sesion .content h2 {
+  margin-bottom: 50px;
 }
 
-.sesion form p{
+.sesion .content form p {
   margin-top: 30px;
 }
 
-.sesion small{
-  color: red;
+.sesion button{
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--border);
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.sesion button:hover{
+  filter: brightness(90%);
+}
+
+.sesion button:focus{
+  filter: brightness(80%);
 }
