--- a/src/components/Dashboard/Tables/InventoryTable/Form/SupplierData/SupplierData.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/SupplierData/SupplierData.module.css
@@ -45,3 +45,13 @@
   margin-left: 5px;
   color: grey;
 }
+
+.error{
+  position: absolute;
+  border-color: red;
+}
+
+.error small{
+  position: absolute;
+  top: 100%;
+}
