--- a/src/components/Dashboard/Tables/InventoryTable/Details/Details.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Details/Details.module.css
@@ -1,5 +1,6 @@
 .container {
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   display: flex;
@@ -11,9 +12,10 @@
 }
 
 .details {
+  position: relative;
   padding: 30px;
-  border-radius: 10px;
-  background-color: var(--panel);
+  border-radius: 5px;
+  background-color: var(--background);
 }
 
 .btnClose {
