--- a/src/components/Dashboard/Tables/InventoryTable/Details/ImageEditor/ImageEditor.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Details/ImageEditor/ImageEditor.module.css
@@ -2,7 +2,7 @@
   width: 400px;
   margin-left: 20px;
   border-radius: 10px;
-  background-color: var(--panel);
+  background-color: var(--background);
 }
 
 .form h4 {
@@ -18,7 +18,7 @@
   height: 445px;
   overflow: hidden;
   border-radius: 5px;
-  outline: 1px solid gray;
+  outline: 1px solid var(--border);
 }
 
 .delete {
@@ -50,7 +50,7 @@
   margin-right: 10px;
   border-radius: 5px;
   border: 1px solid var(--border);
-  background-color: var(--panel);
+  background-color: var(--background);
 }
 
 .image:hover {
