--- a/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
@@ -1,31 +1,35 @@
-.container{
-  position: relative;
+.container {
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 500;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #0006;
 }
 
-.form{
+.form {
+  position: relative;
   width: 500px;
   padding: 20px;
-  border-radius: 10px;
-  background-color: var(--panel);
+  border-radius: 5px;
+  background-color: var(--background);
 }
 
-.form h4{
+.form h4 {
   margin-bottom: 30px;
 }
 
-.close{
+.close {
   display: flex;
   justify-content: flex-end;
+}
+
+.close h4 {
+  flex-grow: 1;
 }
 
 .imageContainer {
@@ -53,7 +57,7 @@
   max-height: 100%;
 }
 
-.imgList{
+.imgList {
   display: flex;
   height: 70px;
   margin-bottom: 20px;
@@ -63,7 +67,7 @@
   background-color: var(--background);
 }
 
-.imgList .image img{
+.imgList .image img {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,11 +79,11 @@
   background-color: var(--panel);
 }
 
-.imgList .image img{
+.imgList .image img {
   width: 50px;
   height: 50px;
 }
 
-.btnContainer button{
+.btnContainer button {
   margin-right: 10px;
 }
