--- a/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -17,11 +17,11 @@
   justify-content: flex-end;
 }
 
-.productLeft span{
+.productLeft span {
   margin-bottom: 15px;
 }
 
-.productLeft div:last-Child{
+.productLeft div:last-child {
   margin-top: 10px;
   margin-right: 10px;
 }
@@ -36,25 +36,25 @@
   grid-column: 1 / 3;
 }
 
-.top{
+.top {
   display: flex;
   align-items: center;
   grid-column: 1 / 3;
 }
 
-.top input{
+.top input {
   margin-right: 5px;
 }
 
-.top label{
+.top label {
   margin-right: 30px;
 }
 
-.top button{
+.top button {
   padding: 2px 10px;
 }
 
-.top .btnClose{
+.top .btnClose {
   flex-grow: 1;
   display: flex;
   justify-content: flex-end;
@@ -73,7 +73,8 @@
 }
 
 .image img {
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .image:hover {
