--- a/src/components/Dashboard/Tables/ProductsTable/Details/ImageEditor/ImageEditor.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/Details/ImageEditor/ImageEditor.module.css
@@ -1,8 +1,8 @@
 .form {
-  width: 400px;
+  width: 250px;
   margin-left: 20px;
   border-radius: 10px;
-  background-color: var(--panel);
+  background-color: var(--background);
 }
 
 .form h4 {
@@ -14,11 +14,11 @@
   display: flex;
   align-items: center;
   width: 100%;
+  height: 305px;
   margin-bottom: 20px;
-  height: 445px;
   overflow: hidden;
   border-radius: 5px;
-  outline: 1px solid gray;
+  outline: 1px solid var(--border);
 }
 
 .delete {
@@ -33,12 +33,12 @@
 
 .imgList {
   display: flex;
-  height: 55px;
+  height: 65px;
   margin-bottom: 20px;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid var(--border);
-  background-color: var(--background);
+  overflow-x: scroll;
 }
 
 .image {
@@ -50,7 +50,6 @@
   margin-right: 10px;
   border-radius: 5px;
   border: 1px solid var(--border);
-  background-color: var(--panel);
 }
 
 .image:hover {
