--- a/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
+++ b/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
@@ -34,6 +34,57 @@
   overflow: hidden;
 }
 
+.filter {
+  padding-left: 20px;
+}
+
+.filter .btnFilter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
+  margin-left: 0;
+  border-radius: 5px;
+  border: 0px;
+}
+
+.filter .btnFilter img {
+  width: 20px;
+  height: 20px;
+  filter: none !important;
+}
+
+.filter .btnFilter:hover {
+  outline: 1px solid var(--border);
+}
+
+.filter .btnFilter:focus {
+  outline: 4px solid var(--border);
+}
+
+.filter .btnFilter:active {
+  background-color: #0002;
+  outline: 1px solid var(--border);
+}
+
+.filterContainer {
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  flex-direction: column;
+  width: 250px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 3px #0004;
+  background-color: var(--background);
+}
+
+.filterContainer button {
+  margin-top: 20px;
+  margin-left: 0;
+}
+
 .contentCard {
   height: 100%;
   padding-bottom: 35px;
@@ -48,26 +99,29 @@
   height: 100%;
 }
 
-.edit-buttons .btn-primary{
+.edit-buttons .btn-primary {
   width: 100%;
 }
 
-.edit-buttons .btn-success{
+.edit-buttons .btn-success {
   width: 50%;
   margin-right: 5px;
 }
 
-.edit-buttons .btn-danger{
+.edit-buttons .btn-danger {
   width: 45%;
 }
 
-.card{
+.card {
   overflow-y: scroll;
 }
 
 .row {
   display: grid;
-  grid-template-columns: repeat(2, 100px) repeat(2, 1fr) repeat(1, 100px) repeat(3, 80px);
+  grid-template-columns: repeat(2, 100px) repeat(2, 1fr) repeat(1, 100px) repeat(
+      3,
+      80px
+    );
   gap: 10px;
   padding: 10px;
   outline: 1px solid var(--border);
