--- a/src/components/Dashboard/Tables/ProductsTable/ProductRow/ProductRow.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/ProductRow/ProductRow.module.css
@@ -1,6 +1,6 @@
 .row{
   display: grid;
-  grid-template-columns: 150px 1fr 200px 80px;
+  grid-template-columns: 100px 150px 300px 100px 1fr 200px 80px;
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
