--- a/src/Animation.css
+++ b/src/Animation.css
@@ -8,6 +8,17 @@
   animation-duration: 0.2s;
 }
 
+.toBottom{
+  animation-name: to-bottom;
+  animation-duration: 0.2s;
+}
+
+.hiddenUp{
+  animation-name: hidden-up;
+  animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+
 @keyframes to-left {
   0% {
     opacity: 0;
@@ -27,5 +38,27 @@
   100% {
     opacity: 1;
     bottom: 0;
+  }
+}
+
+@keyframes to-bottom{
+  0% {
+    opacity: 0;
+    top: -5%;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+
+@keyframes hidden-up{
+  0% {
+    opacity: 1;
+    top: 0;
+  }
+  100% {
+    opacity: 0;
+    top: -5%;
   }
 }
