--- a/src/components/Dashboard/Tables/InvoiceTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/InvoiceTable/Form/Form.module.css
@@ -1,22 +1,19 @@
 .container {
-  position: fixed;
   z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0006;
 }
 
 .form {
-  position: relative;
-  width: 600px;
+  position: absolute;
+  z-index: 500;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   padding: 20px;
-  border-radius: 5px;
-  background-color: white;
+  padding-top: 0;
+  color: var(--font);
+  background-color: var(--background);
 }
 
 .close {
@@ -27,6 +24,12 @@
 
 .close h4 {
   flex-grow: 1;
+}
+
+.data{
+  display: flex;
+  height: 100%;
+  gap: 20px;
 }
 
 .inputs {
