--- a/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable copy/PriceTable.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable copy/PriceTable.module.css
@@ -1,5 +1,9 @@
 .grid {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  max-height: 40%;
+
   outline: 1px solid var(--border);
   border-radius: 5px;
   overflow: hidden;
