--- a/src/components/Dashboard/Tables/SalesTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/Form.module.css
@@ -1,21 +1,19 @@
 .container {
-  position: fixed;
   z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0006;
 }
 
 .form {
+  position: absolute;
+  z-index: 500;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   padding: 20px;
+  padding-top: 0;
+  color: var(--font);
   background-color: var(--background);
-  border: 1px solid var(--border);
-  border-radius: 5px;
 }
 
 .close {
@@ -31,17 +29,29 @@
 
 .flex {
   display: flex;
+  gap: 30px;
+  height: 100%;
 }
 
+/* INPUTS */
 .inputs {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-bottom: 20px;
+  width: 400px;
 }
 
 .inputs input {
-  width: 250px;
+  width: 400px;
+}
+
+.inputs input[type="checkbox"] {
+  width: 50px;
+}
+
+.inputs .generated {
+  display: flex;
+  align-items: center;
 }
 
 .inputs div:nth-child(7) {
@@ -50,6 +60,15 @@
 
 .inputs div:last-child {
   grid-column: 1 / 3;
+}
+
+.invoiceType {
+  display: flex;
+}
+
+.invoiceType button {
+  flex-grow: 1;
+  border-radius: 0;
 }
 
 .categoria {
@@ -116,4 +135,16 @@
 
 .buttonsForm button:first-child {
   margin-right: 10px;
+}
+
+.client {
+  position: relative;
+}
+
+/* TABLES */
+.tables {
+  flex-grow: 1;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
 }
