--- a/src/components/Dashboard/Tables/SalesTable/Form/Form.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/Form.module.css
@@ -50,6 +50,8 @@
 }
 
 .inputs .generated {
+  position: relative;
+  z-index: 500;
   display: flex;
   align-items: center;
 }
@@ -60,6 +62,13 @@
 
 .inputs div:last-child {
   grid-column: 1 / 3;
+}
+
+.inputCheck {
+  position: absolute;
+  top: 23px;
+  right: 5px;
+  width: 50px !important;
 }
 
 .invoiceType {
