--- a/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable copy/PriceRow/PriceRow.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable copy/PriceRow/PriceRow.module.css
@@ -1,11 +1,15 @@
 .row {
   display: grid;
-  grid-template-columns: repeat(3, 1fr) 30px;
+  grid-template-columns: repeat(3, 1fr) 50px;
   grid-template-rows: 1fr;
-  gap: 10px;
-  padding: 10px;
   padding-bottom: 0px;
   outline: 1px solid var(--border);
+}
+
+.row input,
+.row select,
+.row button {
+  border-radius: 0;
 }
 
 .row input {
