--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,17 +1,18 @@
-.dashboard{
+.dashboard {
   display: flex;
   width: 100%;
   height: 100vh;
   color: var(--font);
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100vh;
 }
 
-.table{
+.table {
   flex-grow: 1;
   display: flex;
   width: 100%;
