--- a/src/components/Dashboard/Tables/InventoryTable/InventoryRow/InventoryRow.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/InventoryRow/InventoryRow.module.css
@@ -1,13 +1,28 @@
 .row {
   display: grid;
-  grid-template-columns: 150px 100px 1fr repeat(3, 100px) 130px 100px 80px;
+  grid-template-columns: 150px 100px 1fr repeat(3, 100px) 130px 50px 50px;
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
   padding-bottom: 0px;
-  outline: 1px solid var(--border);
+  border-bottom: 1px solid var(--border);
 }
 
-.row span {
-  border-right: 1px solid var(--border);
+.row span{
+  display: flex;
+  align-items: center;
+}
+
+.row button{
+  border: none;
+}
+
+.row button img {
+  filter: invert(9%) sepia(93%) saturate(5805%) hue-rotate(359deg)
+    brightness(84%) contrast(109%);
+}
+
+.row button:hover img {
+  filter: none;
+  filter: invert(100%);
 }
