--- a/src/components/Dashboard/Tables/InventoryTable/InventoryTable.module.css
+++ b/src/components/Dashboard/Tables/InventoryTable/InventoryTable.module.css
@@ -64,7 +64,7 @@
 
 .card{
   display: grid;
-  grid-template-columns: 200px 150px 100px 1fr repeat(3, 100px) 130px 100px 80px;
+  grid-template-columns: 150px 100px 1fr repeat(3, 100px) 130px 50px 50px;
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
