--- a/src/components/Dashboard/Tables/InvoiceTable/InvoiceTable.module.css
+++ b/src/components/Dashboard/Tables/InvoiceTable/InvoiceTable.module.css
@@ -63,7 +63,7 @@
 
 .row {
   display: grid;
-  grid-template-columns: repeat(2, 100px) repeat(3, 1fr) repeat(3, 80px);
+  grid-template-columns: 100px 200px repeat(2, 1fr) repeat(4, 50px);
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
