--- a/src/components/Dashboard/Tables/ProductsTable/ProductsTable.module.css
+++ b/src/components/Dashboard/Tables/ProductsTable/ProductsTable.module.css
@@ -63,7 +63,7 @@
 
 .row {
   display: grid;
-  grid-template-columns: 100px 150px 300px 100px 1fr 200px 80px;
+  grid-template-columns: 100px 150px 300px 1fr 100px 200px 50px;
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
@@ -75,8 +75,4 @@
   padding-right: 25px;
   color: white;
   background-color: var(--dark-panel);
-}
-
-.firstRow span{
-  margin-left: 10px;
 }
