--- a/src/components/Dashboard/Tables/InvoiceFiles/Table/Table.module.css
+++ b/src/components/Dashboard/Tables/InvoiceFiles/Table/Table.module.css
@@ -1,10 +1,10 @@
-.table{
+.table {
   display: flex;
   flex-direction: column;
   border: 1px solid var(--dark-panel);
 }
 
-.table .header{
+.table .header {
   display: grid;
   grid-template-columns: 100px 1fr repeat(3, 80px);
   padding: 3px 10px;
@@ -12,18 +12,19 @@
   background-color: var(--dark-panel);
 }
 
-.table .body{
+.table .body {
   display: flex;
   flex-direction: column;
   min-height: 200px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.table .row{
+.table .row {
   grid-template-columns: 100px 1fr repeat(3, 80px);
 }
 
-.table .footer{
+.table .footer {
   text-align: right;
   padding: 3px 10px;
   color: var(--dark-font);
