--- a/src/components/Dashboard/Tables/InvoiceFiles/FIlters/Filter.module.css
+++ b/src/components/Dashboard/Tables/InvoiceFiles/FIlters/Filter.module.css
@@ -1,3 +1,7 @@
+.filter {
+  position: relative;
+}
+
 .filter .btnFilter {
   display: flex;
   align-items: center;
@@ -28,6 +32,8 @@
 
 .filterContainer {
   position: absolute;
+  left: -160px;
+  z-index: 1000;
   display: flex;
   gap: 10px;
   margin-top: 10px;
