--- a/src/components/Dashboard/Tables/InvoiceFiles/NewFile/NewFile.module.css
+++ b/src/components/Dashboard/Tables/InvoiceFiles/NewFile/NewFile.module.css
@@ -1,26 +1,64 @@
 .form {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.form div {
-  display: flex;
-  gap: 10px;
-}
-
-.form input,
-.form select {
   height: 40px;
-  padding: 5px 10px;
+  margin-top: 20px;
+  padding: 5px;
   border-radius: 5px;
-  border: 1px solid var(--border);
+  outline: 1px solid var(--border);
+  overflow: hidden;
+  transition: 0.3s;
 }
 
-.form input:nth-child(2) {
-  flex-grow: 1;
+.form h5 {
+  width: 100%;
+  text-align: center;
+}
+
+.form button:nth-child(2) {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 40%;
+  transition: 0.3s;
+}
+
+.form button:nth-child(2) img {
+  width: 10px;
+  height: 20px;
+}
+
+.form button:nth-child(2):hover {
+  outline: 2px solid #0002;
+}
+
+.view button:nth-child(2) {
+  transform: rotate(180deg);
+  transition: 0.3s;
 }
 
 .form label {
   display: none;
+}
+
+.inputs {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 150px 1fr 140px;
+}
+
+.inputs div:nth-child(4) {
+  grid-column: 1 / 3;
+}
+
+.view {
+  height: 180px;
+  transition: 0.3s;
 }
