--- a/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
+++ b/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
@@ -9,15 +9,12 @@
 
 .dashboardList__searchBar {
   display: flex;
+  gap: 20px;
   margin: 20px 0px;
 }
 
 .dashboardList__searchBar input[type="search"] {
   max-width: 500px;
-}
-
-.dashboardList__searchBar button {
-  margin-left: 20px;
 }
 
 .dashboardList__searchBar button img {
@@ -26,6 +23,10 @@
   margin-right: 10px;
   filter: invert(60%) sepia(69%) saturate(3800%) hue-rotate(65deg)
     brightness(80%) contrast(80%);
+}
+
+.dashboardList__searchBar button img {
+
 }
 
 .dashboardList__grid {
@@ -92,8 +93,8 @@
 
 .row {
   display: grid;
-  grid-template-columns: repeat(2, 120px) 1fr 2fr repeat(1, 100px) repeat(
-      3,
+  grid-template-columns: 30px repeat(2, 120px) 1fr 2fr repeat(1, 100px) repeat(
+      4,
       60px
     );
   gap: 10px;
